--- a/index.html
+++ b/index.html
@@ -1,60 +1,73 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ポートフォリオ</title>
+  <title>松尾悠真 | ポートフォリオ</title>
+  <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
 </head>
-
 <body>
   <header>
-    <nav>
-      <h1>My Portfolio</h1>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#works">Works</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>松尾悠真</h1>
+      <p class="subtitle">– 静けさの中に、創造を –</p>
+      <nav>
+        <ul>
+          <li><a href="#">自己紹介</a></li>
+          <li><a href="#works">制作物</a></li>
+          <li><a href="#skills">技術</a></li>
+          <li><a href="#contact">連絡先</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section id="hero">
-    <h2>Welcome to My Portfolio!</h2>
-    <p>麻生太郎のポートフォリオです。</p>
-  </section>
+  <main class="container">
+    <section class="intro">
+      <h2>ごあいさつ</h2>
+      <p>松尾悠真と申します。AI・Web開発・地方創生に関わる技術に関心を持ち、日々学びと創作に励んでおります。</p>
+    </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>麻生情報ビジネス専門学校 福岡校 AI&IoT分野の教員です。PythonやAWS、機械学習、組込み開発、画像処理に強みがあります。</p>
-  </section>
+    <section id="works">
+      <h2>制作物</h2>
+      <div class="work-item">
+        <div class="work-text">
+          <h3>ポートフォリオ</h3>
+          <p>私を知ってもらうために作成。</p>
+        </div>
+        <img src="#" alt="作品画像">
+    </section>
 
-  <section id="works">
-    <h2>My Works</h2>
-    <div class="works-container">
-    <div class="card">
-      <img src="images/sample1.jpg" alt="作品1">
-      <h3>機械学習モデル開発</h3>
-      <p>工場の製品の良品・不良品判別をするAIモデルを開発しました。</p>
-    </div>
-    <div class="card">
-      <img src="images/sample2.jpg" alt="作品2">
-      <h3>組込みシステム開発</h3>
-      <p>SpresenseによるEltresを利用したIoTシステムです。</p>
-    </div>
-    </div>
-  </section>
+    <section id="skills">
+      <h2>技術</h2>
+      <ul>
+        <li>HTML / CSS</li>
+        <li>JavaScript</li>
+        <li>PHP / MySQL</li>
+        <li>Python</li>
+        <li>AWS</li>
+        <li>基本情報技術者</li>
+        <li>J検3級</li>
+        <li>J検基本スキル</li>
+        <li>J検プログラミングスキル</li>
+        <li>excel3級</li>
+      </ul>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>メール: sample@asojuku.ac.jp</p>
-  </section>
+    <section id="contact">
+      <h2>連絡先</h2>
+      <p>お気軽にご連絡ください。</p>
+      <p><strong>mail@example.com</strong></p>
+    </section>
+
+    <div class="back-to-top">
+      <a href="#">▲ ページ上部へ戻る</a>
+    </div>
+  </main>
 
   <footer>
-    <p>&copy; 2025 Aso Business Computer Fukuoka College </p>
+    <p>&copy; 2025 松尾悠真</p>
   </footer>
 </body>
-
 </html>
