--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <h3>ポートフォリオ</h3>
           <p>私を知ってもらうために作成。</p>
         </div>
-        <img src="#" alt="作品画像">
+        <a href="https://aso2401312.github.io/prog/" target="_blank" rel="noopener noreferrer">
+         <img src="potf.png" alt="作品画像" class="work-image">
+        </a>
     </section>
 
     <section id="skills">
