--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
           <p>私を知ってもらうために作成。</p>
         </div>
         <a href="https://aso2401312.github.io/prog/" target="_blank" rel="noopener noreferrer">
-         <img src="potf.png" alt="作品画像" class="work-image">
+        <img src="potf.png" alt="ポートフォリオ画像" class="work-image">
         </a>
+      </div>
     </section>
+
 
     <section id="skills">
       <h2>技術</h2>
